--- a/Incendia/Incendia/Incendia.csproj
+++ b/Incendia/Incendia/Incendia.csproj
@@ -114,12 +114,14 @@
     <Compile Include="Generator.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="IParticleManipulator.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleSystem.cs" />
     <Compile Include="PlayState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="RectangleParticleManipulator.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
