--- a/trunk/Incendia/Incendia/Incendia.csproj
+++ b/trunk/Incendia/Incendia/Incendia.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="RectangleParticleManipulator.cs" />
+    <Compile Include="Rectanglef.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
