--- a/Incendia/Incendia/Incendia.csproj
+++ b/Incendia/Incendia/Incendia.csproj
@@ -113,10 +113,12 @@
     <Compile Include="Frame.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="Global.cs" />
+    <Compile Include="IGraph.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="IParticleManipulator.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleSystem.cs" />
+    <Compile Include="Pathfinder.cs" />
     <Compile Include="PlayState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
