--- a/Incendia/Incendia/Incendia.csproj
+++ b/Incendia/Incendia/Incendia.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Animation.cs" />
     <Compile Include="Camera2D.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="FireSimulation.cs" />
     <Compile Include="Frame.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="Global.cs" />
