--- a/trunk/Incendia/Incendia/Incendia.csproj
+++ b/trunk/Incendia/Incendia/Incendia.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Input.cs" />
     <Compile Include="IParticleManipulator.cs" />
     <Compile Include="MenuState.cs" />
+    <Compile Include="MessageState.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleSystem.cs" />
     <Compile Include="Pathfinder.cs" />
